<resources>
    <string name="app_name">chatify</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">SIGNUP</string>
    <string name="acc">Already have an account?</string>
    <string name="login_now">Login now</string>
    <string name="exit">Exit</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="post">3431</string>
    <string name="posts">posts</string>
    <string name="_6530">6530</string>
    <string name="followers">followers</string>
    <string name="_217">217</string>
    <string name="following">following</string>
    <string name="your_name">Your Name</string>
    <string name="bio">Your bio goes here</string>
    <string name="here">and here too</string>
    <string name="link">yoursite.com</string>
    <string name="settings">settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile">profile</string>
</resources>