<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/symbol" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:id="@+id/f_name"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"

        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:id="@+id/l_name"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:id="@+id/email"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:inputType="textEmailAddress"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/pass"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:inputType="textPassword"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        android:id="@+id/r_pass"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:buttonTint="@color/yellow"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/yellow"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    >
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/btnsignup"

        />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/btnexit"

        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"



            />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/login_now"

            android:textColor="@color/link"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />
    </LinearLayout>


</LinearLayout>