<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instagram">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="serif-monospace"
            android:text="@string/username"
            android:background="@color/light_grey"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/settings"
            android:contentDescription="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            app:cardElevation = "16dp"
            app:cardCornerRadius = "160dp"
            android:layout_margin = "16dp"
            android:foregroundGravity = "center"

            android:layout_width = "100dp"
            android:layout_height = "100dp">

            <ImageView
                android:scaleType = "centerCrop"
                android:src = "@drawable/img"
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:contentDescription="@string/profile" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/_6530"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:text="@string/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/_217"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:text="@string/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:text="@string/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/your_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/bio"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/here"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/link"
            android:textSize="20sp"
            android:textColor="@color/blue"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:drawableTop="@drawable/grid"
            style="?android:attr/buttonBarButtonStyle" />

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/list"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:drawableTop="@drawable/loc"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/cont"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/insta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:drawableTop="@drawable/home"
            style="?android:attr/buttonBarButtonStyle" />

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/search"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:drawableTop="@drawable/camera"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/heart"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button

            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/cont"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>


</LinearLayout>
